Add required to form on parent page

--- a/src/main/resources/static/css/partials/_signUpPage.scss
+++ b/src/main/resources/static/css/partials/_signUpPage.scss
@@ -71,7 +71,7 @@
         border:1px solid $accent;
         padding: 10px;
       }
-      input:invalid + label {
+      input:valid + label {
         transform:translateY(-27px);
       }
       input:focus {
