added forgotPassword in controller

--- a/src/main/resources/templates/forgotPassword.html
+++ b/src/main/resources/templates/forgotPassword.html
@@ -8,17 +8,9 @@
 
 <form action="forgotPassword.html" th:action="@{/forgotPassword}">
     <fieldset>
-        <legend>Reset Your Password</legend>
-        <label for="registerPrimaryFirstName">
-            Primary First Name <input type="text" id="registerPrimaryFirstName" name="registerPrimaryFirstName" th:value="${parent.getPrimaryFirstName()}"/>
-        </label>
-        <br/>
-        <label for="registerPrimaryLastName">
-            Primary Last Name <input type="text" id="registerPrimaryLastName" name="registerPrimaryLastName" th:value="${parent.getPrimaryLastName()}"/>
-        </label>
-        <br/>
-        <label for="registerSecondaryFirstName">
-            Secondary First Name <input type="text" id="registerSecondaryFirstName" name="registerSecondaryFirstName" th:value="${parent.getSecondaryFirstName()}"/>
+        <legend>Find Your Account</legend>
+        <label for="searchEmail">
+            Please enter your email<input type="text" id="searchEmail" name="searchEmail" th:value="${parent.getPrimaryEmail() || parent.getSecondaryEmail() || teacher.getEmail()}"/>
         </label>
     </fieldset>
 </form>
