--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,7 +34,9 @@
         </label>
       </fieldset>
 
-      <p>Forgot Password</p>
+
+        <!--Changed <p> to <a> so might need renaming in CSS-->
+      <a href="forgotPassword.html" th:href="@{/forgotPassword}">Forgot Password</a>
       <button type="submit" class="send">Login</button>
       <!-- <button type="submit"><a href="teacherSignUp.html" th:href="@{/teacherSignUp}">Sign-Up</a></button> -->
     </form>
