--- a/src/main/resources/templates/parent.html
+++ b/src/main/resources/templates/parent.html
@@ -31,22 +31,22 @@
         <legend>Parent Registration</legend>
 
         <div class="input-wrapper">
-          <input type="text" id="registerPrimaryFirstName" name="registerPrimaryFirstName" th:value="${parent.getPrimaryFirstName()}" required/>
+          <input type="text" id="registerPrimaryFirstName fname" name="registerPrimaryFirstName" th:value="${parent.getPrimaryFirstName()}"/>
           <label class="gray-label" for="registerPrimaryFirstName">First Name* </label>
         </div>
 
         <div class="input-wrapper">
-          <input type="text" id="registerPrimaryLastName" name="registerPrimaryLastName" th:value="${parent.getPrimaryLastName()}" required/>
+          <input type="text" id="registerPrimaryLastName lname" name="registerPrimaryLastName" th:value="${parent.getPrimaryLastName()}" min="0" required="required" />
           <label class="gray-label" for="registerPrimaryLastName">Last Name* </label>
         </div>
 
         <div class="input-wrapper">
-          <input type="email" id="registerPrimaryEmail" name="registerPrimaryEmail" th:value="${parent.getPrimaryEmail()}" required/>
+          <input type="email" id="registerPrimaryEmail" name="registerPrimaryEmail" th:value="${parent.getPrimaryEmail()}" />
           <label class="gray-label" for="registerPrimaryEmail"> Email* </label>
         </div>
 
         <div class="input-wrapper">
-          <input type="password" id="registerPassword" name="registerPassword" th:value="${parent.getPassword()}" required/>
+          <input type="password" id="registerPassword" name="registerPassword" th:value="${parent.getPassword()}" />
           <label class="gray-label" for="registerPassword">Password* </label>
         </div>
 
@@ -102,6 +102,7 @@
         </select>
 
       </fieldset>
+      <button type="submit" class="update">Register11</button>
     </form>
     <a href="login.html" th:href="@{/}"><button type="submit" class="update">Register</button></a>
   </div>
