message log set up

--- a/src/main/resources/templates/messageLog.html
+++ b/src/main/resources/templates/messageLog.html
@@ -64,7 +64,7 @@
         <td th:text="${message.getMessageSentTo()}"></td>
         <td th:text="${message.getStudentName()}"></td>
         <td th:text="${message.getParentName()}"></td>
-        <td th:text="${message.getTemplatesent()}"></td>
+        <td th:text="${message.getTemplateSent()}"></td>
         <td th:text="${message.getNotes()}"></td>
 
 
