added forgotPassword contents to Controller, DSService and TeacherRepo

--- a/src/main/resources/templates/forgotPassword.html
+++ b/src/main/resources/templates/forgotPassword.html
@@ -10,10 +10,11 @@
     <fieldset>
         <legend>Find Your Account</legend>
         <label for="searchEmail">
-            Please enter your email<input type="text" id="searchEmail" name="searchEmail" th:value="${parent.getPrimaryEmail() || parent.getSecondaryEmail() || teacher.getEmail()}"/>
+            Please enter your email address <input type="text" id="searchEmail" name="searchEmail" value=""/>
         </label>
     </fieldset>
 </form>
+<button>Search</button>
 
 </body>
 </html>
