successfully sent reset email link

--- a/src/main/resources/templates/resetPassword.html
+++ b/src/main/resources/templates/resetPassword.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <title>Reset Your Password</title>
 </head>
 <body>
 
-fasdij
+<div th:text="${userId}">User Id Here</div>
+
 </body>
 </html>
