--- a/src/main/resources/templates/forgotPassword.html
+++ b/src/main/resources/templates/forgotPassword.html
@@ -6,15 +6,16 @@
 </head>
 <body>
 
-<form action="forgotPassword.html" th:action="@{/forgotPassword}">
+<form action="forgotPassword.html" th:action="@{/passwordResetEmail}">
     <fieldset>
         <legend>Find Your Account</legend>
         <label for="searchEmail">
-            Please enter your email address <input type="text" id="searchEmail" name="searchEmail" value=""/>
+            Please enter your email address <input type="text" id="searchEmail" name="email" value=""/>
         </label>
     </fieldset>
+    <button>Search</button>
 </form>
-<button>Search</button>
+
 
 </body>
 </html>
