--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -23,7 +23,7 @@
           <li><a href="#" th:href="@{/messageLog}">History</a></li>
           <li><a href="#">Profile</a></li>git
         </ul>
-    </nav>
+    </nav><hr>
 </header>
 
 
