uploading styling that was deleted

--- a/src/main/resources/static/css/partials/_login.scss
+++ b/src/main/resources/static/css/partials/_login.scss
@@ -13,7 +13,7 @@
     box-sizing: border-box;
   }
 
-  .login-caption {
+  .tagline {
     padding: 0 0 15px 15px;
     width: 80%;
     float: left;
