--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
 
   <div class="login-input">
     <img src="../static/images/teacher-talk-logo.gif" th:src="${'images/teacher-talk-logo.gif'}" alt="teacher talk logo" />
-    <div class="login-caption clearfix">
+    <div class="tagline clearfix">
       <h1>Teacher Talk</h1>
       <h3>Empowering <span class="bold">Education</span> Through Better <span class="bold">Communication</span>.</h3>
     </div>
