--- a/src/main/resources/static/css/partials/_signUpPage.scss
+++ b/src/main/resources/static/css/partials/_signUpPage.scss
@@ -2,28 +2,28 @@
 //fit login form style
 
 .faq {
-  // border-right: 1px solid #333;
   width: 60%;
-  padding: 50px;
   border:3px solid $accent;
-
-  img {
-    max-height: 250px;
-    padding-bottom: 15px;
-    display: block;
-    margin: 0 auto;
+  .faq-header {
+    background: $header;
+    height: 65px;
+    padding: 10px;
+    display: flex;
+    justify-content:center;
+    align-items: flex-end;
+    img {
+      margin-right: 15px;
+      max-height: 100%;
+    }
+    .tagline {
+      h3{
+        font-size: .8rem;
+      }
+    }
   }
-
-  hr {
-    margin: 15px;
-  }
-
-  h1 {
-    text-align: center;
-    display: block;
-    margin: 0 auto;
-  }
-
+}
+.faq-content {
+  padding: 5px 50px;
   h3 {
     font-weight: 700;
     margin: 15px 0 5px;
@@ -45,6 +45,12 @@
   form {
     text-align: center;
     margin: 15px 0;
+
+    legend {
+      text-align:center;
+      margin: 8px auto;
+      display:block;
+    }
 
     .input-wrapper {
       position: relative;
@@ -74,9 +80,9 @@
       // input:valid ~ label {
       //   transform:translateY(-27px);
       // }
-      input:focus {
-        border-color: $primary;
-      }
+      // input:focus {
+      //   border-color: $primary;
+      // }
       // input:focus ~ label {
       //   color: $primary;
       //   transform:translateY(-27px);
@@ -85,37 +91,33 @@
   }
 }
 
-
-// .populated {
-//   color: $primary;
-//   font-size: .8rem;
-//   position: relative;
-//   border:1px solid $accent;
-//   padding: 10px;
-//   top: -20px;
-// }
-
 // Adding Additional Contact or Student Fields
-
-.addContact{
-  text-align: right;
-  padding: 5px;
-  // border: 1px solid $primary;
-  // color: #fff;
-  .plus {
-    padding: 2px 10px;
-    background: $primary;
-    color: #fff;
-    font-size: 25px;
-    margin-left: 5px;
-  }
+.border-seperation {
+  margin: 15px 0;
+  border:3px solid $accent;
 }
-
-// .addContact:hover,
-// .addContact:focus {
-//   background: rgba(51,51,51,.9);
-// }
 
 .contactInfo {
   display:none;
+}
+
+.addContact{
+  padding: 5px;
+  cursor: pointer;
+  font-size: .9rem;
+
+  .plus {
+    border-radius: 3px;
+    padding: 2px 7px;
+    background: $primary;
+    color: #fff;
+    font-size: 20px;
+    margin-left: 5px;
+    transition: all .5s;
+    -webkit-transition: all 0.5s;
+  }
+  .plus:hover,
+  .plus:focus {
+    background: rgba(26,177,116,.8);
+  }
 }
