--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -54,12 +54,12 @@ nav ul li {
   width: 20%;
   float: left;
   box-sizing: border-box; }
-.login-input .login-caption {
+.login-input .tagline {
   padding: 0 0 15px 15px;
   width: 80%;
   float: left;
   box-sizing: border-box; }
-  .login-input .login-caption h3 {
+  .login-input .tagline h3 {
     font-size: .9rem;
     font-weight: 300;
     width: 60%; }
@@ -118,20 +118,23 @@ nav ul li {
 
 .faq {
   width: 60%;
-  padding: 50px;
   border: 3px solid #ececec; }
-  .faq img {
-    max-height: 250px;
-    padding-bottom: 15px;
-    display: block;
-    margin: 0 auto; }
-  .faq hr {
-    margin: 15px; }
-  .faq h1 {
-    text-align: center;
-    display: block;
-    margin: 0 auto; }
-  .faq h3 {
+  .faq .faq-header {
+    background: #faf0a1;
+    height: 65px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end; }
+    .faq .faq-header img {
+      margin-right: 15px;
+      max-height: 100%; }
+    .faq .faq-header .tagline h3 {
+      font-size: .8rem; }
+
+.faq-content {
+  padding: 5px 50px; }
+  .faq-content h3 {
     font-weight: 700;
     margin: 15px 0 5px; }
 
@@ -142,6 +145,10 @@ nav ul li {
 .signup form {
   text-align: center;
   margin: 15px 0; }
+  .signup form legend {
+    text-align: center;
+    margin: 8px auto;
+    display: block; }
   .signup form .input-wrapper {
     position: relative;
     display: inline-block;
@@ -163,21 +170,30 @@ nav ul li {
       font-size: .8rem;
       border: 1px solid #ececec;
       padding: 10px; }
-    .signup form .input-wrapper input:focus {
-      border-color: #00b074; }
 
-.addContact {
-  text-align: right;
-  padding: 5px; }
-  .addContact .plus {
-    padding: 2px 10px;
-    background: #00b074;
-    color: #fff;
-    font-size: 25px;
-    margin-left: 5px; }
+.border-seperation {
+  margin: 15px 0;
+  border: 3px solid #ececec; }
 
 .contactInfo {
   display: none; }
+
+.addContact {
+  padding: 5px;
+  cursor: pointer;
+  font-size: .9rem; }
+  .addContact .plus {
+    border-radius: 3px;
+    padding: 2px 7px;
+    background: #00b074;
+    color: #fff;
+    font-size: 20px;
+    margin-left: 5px;
+    transition: all .5s;
+    -webkit-transition: all 0.5s; }
+  .addContact .plus:hover,
+  .addContact .plus:focus {
+    background: rgba(26, 177, 116, 0.8); }
 
 * {
   margin: 0;
@@ -233,8 +249,8 @@ button {
   padding: 10px 30px;
   border: none;
   outline: 0;
-  -webkit-transition: background 0.2s;
-  transition: background 0.2s; }
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s; }
 
 .send {
   background: #00b074; }
@@ -271,7 +287,12 @@ input, textarea {
   width: 50vw; }
 
 fieldset {
-  border: none; }
+  border: none;
+  margin: 0;
+  padding: 0; }
+
+legend {
+  font-weight: 700; }
 
 .login-input {
   padding: 25px 15px; }
