--- a/src/main/resources/static/css/partials/_login.scss
+++ b/src/main/resources/static/css/partials/_login.scss
@@ -1,3 +1,35 @@
+///////////////////////////
+// Login, Signup Page ////
+/////////////////////////
+
+#login-page {
+  // background: #fff;
+
+  // border:10px solid red;
+
+  section{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 25px auto 3%;
+    max-width: 1024px;
+
+  }
+}
+
+.login-shape, .login-input {
+  min-height: 650px;
+  width: 50%;
+  padding-top: 50px;
+}
+
+.login-shape {
+  background: url("../images/login-shapes.gif");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 // Style logo and caption on page
 
 .bold {
@@ -5,38 +37,44 @@
 }
 
 .login-input {
-  // Logo
-  img {
-    padding: 5px 0 0 25px;
-    width: 20%;
-    float: left;
-    box-sizing: border-box;
-  }
+  text-align: center;
+  background:#fff;
 
-  .tagline {
-    padding: 0 0 15px 15px;
-    width: 80%;
-    float: left;
-    box-sizing: border-box;
+  .login-header {
+    margin: 10px 20px;
 
+    img {
+      width: 20%;
+    }
     h3 {
       font-size: .9rem;
       font-weight: 300;
       width: 60%;
+      margin: 0 auto;
     }
   }
+  //   button {
+  //     margin-top: 5px ;
+  // }
 }
 
-.login-input {
-  p {
-    margin: 0;
-    font-size: .8rem;
-    color: $primary;
-    text-decoration: underline;
-  }
+.rememberMe {
+  display: block;
+  font-size: .8rem;
+  margin-top: 15px;
+}
 
-  button {
-    // margin: 15px auto;
-    padding: 10px 60px;
-  }
+.forgot-password{
+  margin-top: 15px;
+  display: inline-block;
+  border:1px solid transparent;
+  font-size: .8rem;
+  color: $primary;
+  text-decoration: none;
+  border-bottom: 1px solid transparent;
+  transition: all .3s;
+}
+.forgot-password:hover {
+  border-bottom: 1px solid #53b98f;
+  color: #53b98f;
 }
