--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -46,31 +46,58 @@ nav ul li {
   padding: 10px;
   font-weight: 700; }
 
+#login-page section {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 25px auto 3%;
+  max-width: 1024px; }
+
+.login-shape, .login-input {
+  min-height: 650px;
+  width: 50%;
+  padding-top: 50px; }
+
+.login-shape {
+  background: url("../images/login-shapes.gif");
+  background-position: center;
+  background-repeat: no-repeat; }
+
 .bold {
   font-weight: 700; }
 
-.login-input img {
-  padding: 5px 0 0 25px;
-  width: 20%;
-  float: left;
-  box-sizing: border-box; }
-.login-input .tagline {
-  padding: 0 0 15px 15px;
-  width: 80%;
-  float: left;
-  box-sizing: border-box; }
-  .login-input .tagline h3 {
-    font-size: .9rem;
-    font-weight: 300;
-    width: 60%; }
+.login-input {
+  text-align: center;
+  background: #fff; }
+  .login-input .login-header {
+    margin: 10px 20px; }
+    .login-input .login-header img {
+      width: 20%; }
+    .login-input .login-header h3 {
+      font-size: .9rem;
+      font-weight: 300;
+      width: 60%;
+      margin: 0 auto; }
 
-.login-input p {
-  margin: 0;
+.rememberMe {
+  display: block;
+  font-size: .8rem;
+  margin-top: 15px; }
+
+.forgot-password {
+  margin-top: 15px;
+  display: inline-block;
+  border: 1px solid transparent;
   font-size: .8rem;
   color: #00b074;
-  text-decoration: underline; }
-.login-input button {
-  padding: 10px 60px; }
+  text-decoration: none;
+  border-bottom: 1px solid transparent;
+  transition: all .3s; }
+
+.forgot-password:hover {
+  border-bottom: 1px solid #53b98f;
+  color: #53b98f; }
 
 .remodal {
   display: none;
@@ -116,6 +143,16 @@ nav ul li {
   text-decoration: none;
   cursor: pointer; }
 
+.faq, .signup {
+  background: #fff;
+  margin: 0 auto; }
+
+#signUpPage {
+  display: flex;
+  justify-content: top;
+  max-width: 1024px;
+  margin: 25px auto; }
+
 .faq {
   width: 60%;
   border: 3px solid #ececec; }
@@ -133,7 +170,7 @@ nav ul li {
       font-size: .8rem; }
 
 .faq-content {
-  padding: 5px 50px; }
+  padding: 5px 50px 25px; }
   .faq-content h3 {
     font-weight: 700;
     margin: 15px 0 5px; }
@@ -149,27 +186,30 @@ nav ul li {
     text-align: center;
     margin: 8px auto;
     display: block; }
-  .signup form .input-wrapper {
-    position: relative;
-    display: inline-block;
-    margin: 5px; }
-    .signup form .input-wrapper label {
-      position: absolute;
-      top: 10px;
-      left: 15px;
-      z-index: 5;
-      margin: 10px;
-      padding: 0 2px;
-      font-size: .8rem;
-      font-weight: 500;
-      background: #fff;
-      pointer-events: none;
-      transition: transform 100ms ease;
-      transform: translateY(-10px); }
-    .signup form .input-wrapper input {
-      font-size: .8rem;
-      border: 1px solid #ececec;
-      padding: 10px; }
+
+.input-wrapper {
+  position: relative;
+  display: inline-block;
+  margin: 5px; }
+  .input-wrapper label {
+    position: absolute;
+    top: 10px;
+    left: 15px;
+    z-index: 5;
+    margin: 10px;
+    padding: 0 2px;
+    font-size: .8rem;
+    font-weight: 500;
+    background: #fff;
+    pointer-events: none;
+    transition: transform 100ms ease;
+    transform: translateY(-10px); }
+  .input-wrapper input {
+    font-size: .8rem;
+    border: 1px solid #ececec;
+    padding: 10px; }
+  .input-wrapper input:invalid ~ label {
+    transform: translateY(-27px); }
 
 .border-seperation {
   margin: 15px 0;
@@ -269,23 +309,6 @@ button {
 input, textarea {
   outline: none; }
 
-.faq, .signup, .login-input {
-  background: #fff;
-  margin: 0 auto; }
-
-#login-page, #signUpPage {
-  display: flex;
-  justify-content: top;
-  max-width: 1024px;
-  margin: 0 auto; }
-
-.login-shape {
-  background: url("../images/login-shapes.gif");
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 100vh;
-  width: 50vw; }
-
 fieldset {
   border: none;
   margin: 0;
@@ -293,32 +316,6 @@ fieldset {
 
 legend {
   font-weight: 700; }
-
-.login-input {
-  padding: 25px 15px; }
-  .login-input form {
-    text-align: center;
-    margin: 15px 0;
-    clear: both; }
-    .login-input form legend {
-      font-weight: 700;
-      font-size: 26px;
-      margin: 5px auto; }
-    .login-input form label {
-      margin: 10px;
-      text-align: right;
-      display: block;
-      width: 350px;
-      padding: 5px;
-      font-weight: 700;
-      font-size: 1.15rem; }
-      .login-input form label input {
-        border: 1px solid #00b074;
-        padding: 10px;
-        text-align: left; }
-
-.login-input form .rememberMe {
-  font-size: .8rem; }
 
 .clearfix::after {
   content: "";
