--- a/src/main/resources/static/css/style.scss
+++ b/src/main/resources/static/css/style.scss
@@ -99,33 +99,8 @@ input, textarea {
   outline: none;
 }
 
-///////////////////////////
-// Login, Signup Page ////
-/////////////////////////
-
-.faq, .signup, .login-input {
-  background:#fff;
-  margin: 0 auto;
-}
-
-#login-page, #signUpPage {
-  display: flex;
-  justify-content: top;
-  // background: #fff;
-  max-width: 1024px;
-  margin: 0 auto;
-}
-
-.login-shape {
-  background: url("../images/login-shapes.gif");
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 100vh;
-  width: 50vw;
-}
-
 // Login Input/////////////
-// Teacher Sign Up Input//
+//  Sign Up Input//
 
 
 fieldset {
@@ -136,47 +111,6 @@ fieldset {
 
 legend {
   font-weight: 700;
-}
-
-.login-input {
-  padding: 25px 15px;
-
-  form {
-    text-align: center;
-    margin: 15px 0;
-    clear: both;
-
-    legend {
-      font-weight: 700;
-      font-size: 26px;
-      margin: 5px auto;
-    }
-
-    label {
-      margin: 10px;
-      text-align: right;
-      display: block;
-      width: 350px;
-      padding: 5px;
-      font-weight: 700;
-      font-size: 1.15rem;
-
-      input {
-        border:1px solid $primary;
-        padding: 10px;
-        text-align: left;
-      }
-    }
-  }
-}
-
-
-.login-input{
-  form{
-    .rememberMe {
-      font-size: .8rem;
-    }
-  }
 }
 
 .clearfix::after{
