fixed parent link in modal

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,7 +27,7 @@
 
         <div class="input-wrapper">
          <input type="text" id="loginEmail" name="loginEmail" th:value="${userEmail}"/>
-          <label for="loginEmail" class="loginEmail">First Name </label>
+          <label for="loginEmail" class="loginEmail">Email</label>
         </div>
         <div class="input-wrapper">
           <input type="password" id="loginPassword" name="loginPassword" th:value="${userPassword}"/>
@@ -57,7 +57,7 @@
   			<div class="modal-content">
           <i class="fa fa-times close" aria-label="close" aria-hidden="true"></i>
   				<h3>Which Account Would You Like to Create?</h3>
-          <a href="parent.html"><button class="update">Parent</button></a>
+          <a href="parentSignUp.html"><button class="update">Parent</button></a>
           <a href="teacherSignUp.html"><button class="update">Teacher</button></a>
   			</div>
     	</div>
