added preferred language to parent bean & updated message service

--- a/src/main/resources/templates/parent.html
+++ b/src/main/resources/templates/parent.html
@@ -39,7 +39,7 @@
 
         <div class="input-wrapper">
           <input type="text" id="registerPrimaryFirstName" name="registerPrimaryFirstName" th:value="${parent.getPrimaryFirstName()}" required="required"/>
-          <label for="registerPrimaryFirstName">First Name* </label>
+          <label for="registerPrimaryFirstName">First Name </label>
         </div>
         <div class="input-wrapper">
           <input type="text" id="registerPrimaryLastName" name="registerPrimaryLastName" th:value="${parent.getPrimaryLastName()}" required="required" />
