--- a/src/main/resources/templates/teacherSignUp.html
+++ b/src/main/resources/templates/teacherSignUp.html
@@ -22,13 +22,13 @@
 
     <div class="faq-content">
       <h3>What is Teacher Talk?</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Teacher Talk is an app developed to empower education by streamlining the process of communication between teachers and parents.  </p>
       <h3>Why is this useful?</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+      <p>Teacher Talk saves time by managing contacts, providing professional message templates, and automatically creating a log of your communication. Teacher Talk allows teachers to be more proactive in their communication by simplifying the process from start to finish. </p>
       <h3>How does it work?</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Teacher talk is easy to use. It allows parents to sign up and manage their best contact information. Teachers are present with a familiar email-like view where they can simply select students, their message and hit send. Teacher talk takes care of the rest</p>
       <h3>Can I make my own message template?</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>Yes! While Teacher Talk comes with a variety of useful message templates it is easy to add your own message templates at any time</p>
     </div>
   </section>
 
