change message to read from message text area

--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -53,7 +53,7 @@
         <hr/>
         <label>
             Message
-            <textarea id="messageTextArea">Message Goes Here</textarea>
+            <textarea name="messageText" id="messageTextArea">Message Goes Here</textarea>
         </label>
         <button>Send Message</button>
     </form>
