made login page, sign up page and message page mobile responsive. Added a hamburger menu

--- a/src/main/resources/static/css/partials/_login.scss
+++ b/src/main/resources/static/css/partials/_login.scss
@@ -3,17 +3,17 @@
 /////////////////////////
 
 #login-page {
-  // background: #fff;
-
-  // border:10px solid red;
 
   section{
+    -webkit-box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -moz-box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 25px auto 3%;
     max-width: 1024px;
+    width: 90%;
 
   }
 }
