--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -57,7 +57,7 @@
   			<div class="modal-content">
           <i class="fa fa-times close" aria-label="close" aria-hidden="true"></i>
   				<h3>Which Account Would You Like to Create?</h3>
-          <a href="parentSignUp.html"><button class="update">Parent</button></a>
+          <a href="parent.html"><button class="update">Parent</button></a>
           <a href="teacherSignUp.html"><button class="update">Teacher</button></a>
   			</div>
     	</div>
