--- a/src/main/resources/static/css/partials/_header.scss
+++ b/src/main/resources/static/css/partials/_header.scss
@@ -1,41 +1,123 @@
+.header-tagline {
+  background: #fff;
+  padding: 15px;
+  text-align: center;
+
+  p {
+    font-size: .8rem;
+  }
+}
+
 header {
   background: $header;
-  // height: 75px;
-  padding: 25px 50px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
+  padding: 10px;
+  // text-align: center;
+  // display: flex;
+  // justify-content:space-between;
+  // align-items: center;
+  position: relative;
 }
+
+// style if logo is to left instead of centered
+// .logo {
+//   // position: relative;
+//   position: absolute;
+//   top: -7px;
+//   background: #fff;
+//   padding: 10px;
+//   img {
+//     height: 30px;
+//   }
+//   h1 {
+//     font-size: 1.3rem;
+//     // position: absolute;
+//     bottom: 0px;
+//     left: 80px;
+//   }
+// }
 
 .logo {
-  // position: relative;
-  img {
-    height: 50px;
-  }
-  h1 {
-    font-size: 1.3rem;
-    // position: absolute;
-    bottom: 0px;
-    left: 80px;
-  }
+  position: absolute;
+  top: -20px;
+  left:0;
+  background: #fff;
+  padding: 13px 7px;
+  width: 45px;
+  -webkit-box-shadow:0 1px 3px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow:0 1px 3px rgba(0, 0, 0, 0.3);
+  box-shadow:0 1px 3px rgba(0, 0, 0, 0.3);
 }
 
+
 nav {
+  position: relative;
+  text-align: right;
+  margin: 0 50px;
+
   ul {
+    // position: relative;
+    // left: 50px;
+
     li {
       display: inline-block;
+
       a {
         cursor: pointer;
         color: #333;
         text-decoration: none;
-        margin: 5px;
-        padding: 5px 0;
-        border-bottom: 2px solid transparent;
-        transition: border 1s;
+        margin: 0px 2px;
+        padding: 12px 10px;
+        transition: background .5s;
+        -webkit-box-shadow:0 1px 3px rgba(0, 0, 0, 0.3);
+        -moz-box-shadow:0 1px 3px rgba(0, 0, 0, 0.3);
+        box-shadow:0 1px 3px rgba(0, 0, 0, 0.3);
       }
-      a:hover {
-        border-color: #333;
+      a:hover, a:focus {
+        background: #fff;
       }
+    }
+  }
+}
+
+
+// Mobile Navigation
+.mobile {
+  display: none;
+}
+
+.hamburger {
+  color: #333;
+  font-size: 20px;
+  padding: 5px 8px;
+  margin-left: 25px;
+  position: relative;
+  top: 0px;
+  right: 0px;
+  cursor: pointer;
+  transition: background .5s;
+  -webkit-box-shadow:0 1px 3px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow:0 1px 3px rgba(0, 0, 0, 0.3);
+  box-shadow:0 1px 3px rgba(0, 0, 0, 0.3);
+}
+.hamburger:hover, .hamburger:focus {
+  background: #fff;
+}
+
+
+.hamburger-menu {
+  display: none;
+  position: absolute;
+  right:-2px;
+  top:35px;
+  z-index: 100;
+
+  li {
+    display:block;
+    a {
+      display: block;
+      width: 100px;
+      padding: 8px 10px;
+      background: $header;
     }
   }
 }
