--- a/src/main/resources/static/css/partials/_signUpPage.scss
+++ b/src/main/resources/static/css/partials/_signUpPage.scss
@@ -8,24 +8,30 @@
   justify-content: top;
   // background: #fff;
   max-width: 1024px;
+  width: 90%;
   margin: 25px auto;
 }
 
 //fit login form style
 
 .faq {
-  width: 60%;
-  border:3px solid $accent;
+  width: 53%;
+  margin-right: 3%;
+  -webkit-box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -moz-box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  // border-bottom: 15px solid $header;
+
   .faq-header {
     background: $header;
-    height: 65px;
+    // height: 65px;
     padding: 10px;
     display: flex;
     justify-content:center;
     align-items: flex-end;
     img {
       margin-right: 15px;
-      max-height: 100%;
+      width: 50px;
     }
     .tagline {
       h3{
@@ -44,8 +50,10 @@
 }
 
 .signup {
-  width: 40%;
-  border:3px solid $accent;
+  width: 45%;
+  -webkit-box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -moz-box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 
@@ -54,6 +62,8 @@
 // Styling Form
 
 .signup {
+  padding: 10px;
+  box-sizing: border-box;
 
   form {
     text-align: center;
@@ -92,9 +102,9 @@
     border:1px solid $accent;
     padding: 10px;
   }
-  input:invalid ~ label {
-    transform:translateY(-27px);
-  }
+  // input:invalid ~ label {
+  //   transform:translateY(-27px);
+  // }
   // input:focus {
   //   border-color: $primary;
   // }
