--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,58 +1,150 @@
+.header-tagline {
+  background: #fff;
+  padding: 15px;
+  text-align: center; }
+  .header-tagline p {
+    font-size: .8rem; }
+
 header {
   background: #faf0a1;
-  padding: 25px 50px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end; }
+  padding: 10px;
+  position: relative; }
 
-.logo img {
-  height: 50px; }
-.logo h1 {
-  font-size: 1.3rem;
-  bottom: 0px;
-  left: 80px; }
+.logo {
+  position: absolute;
+  top: -20px;
+  left: 0;
+  background: #fff;
+  padding: 13px 7px;
+  width: 45px;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3); }
 
-nav ul li {
-  display: inline-block; }
-  nav ul li a {
-    cursor: pointer;
-    color: #333;
-    text-decoration: none;
-    margin: 5px;
-    padding: 5px 0;
-    border-bottom: 2px solid transparent;
-    transition: border 1s; }
-  nav ul li a:hover {
-    border-color: #333; }
+nav {
+  position: relative;
+  text-align: right;
+  margin: 0 50px; }
+  nav ul li {
+    display: inline-block; }
+    nav ul li a {
+      cursor: pointer;
+      color: #333;
+      text-decoration: none;
+      margin: 0px 2px;
+      padding: 12px 10px;
+      transition: background .5s;
+      -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+      -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3); }
+    nav ul li a:hover, nav ul li a:focus {
+      background: #fff; }
+
+.mobile {
+  display: none; }
+
+.hamburger {
+  color: #333;
+  font-size: 20px;
+  padding: 5px 8px;
+  margin-left: 25px;
+  position: relative;
+  top: 0px;
+  right: 0px;
+  cursor: pointer;
+  transition: background .5s;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3); }
+
+.hamburger:hover, .hamburger:focus {
+  background: #fff; }
+
+.hamburger-menu {
+  display: none;
+  position: absolute;
+  right: -2px;
+  top: 35px;
+  z-index: 100; }
+  .hamburger-menu li {
+    display: block; }
+    .hamburger-menu li a {
+      display: block;
+      width: 100px;
+      padding: 8px 10px;
+      background: #faf0a1; }
+
+.container-title {
+  background: #00b074;
+  padding: 10px;
+  font-weight: 700; }
+
+.input-wrapper {
+  padding: 5px 15px; }
 
 .message-container {
   background: #fff;
   width: 75%;
-  margin: 0 auto 25px; }
+  margin: 50px auto;
+  padding-bottom: 20px; }
   .message-container form {
-    padding: 10px; }
-    .message-container form input {
-      padding: 5px; }
+    width: 90%;
+    margin: auto; }
+    .message-container form select {
+      outline: none;
+      height: 35px;
+      background: #fff;
+      margin: 15px 0;
+      font-size: .8rem; }
     .message-container form textarea {
-      width: 80%;
-      height: 300px;
+      font-size: .8rem;
+      width: 100%;
+      display: block;
+      margin-bottom: 40px;
+      padding: 5px;
+      box-sizing: border-box;
+      height: 150px;
       vertical-align: top; }
-  .message-container hr {
-    margin: 25px 0; }
 
-.container-title {
-  background: #00b074;
-  margin-top: 25px;
-  padding: 10px;
-  font-weight: 700; }
+.shadow-effect {
+  position: relative;
+  -webkit-box-shadow: 0 1px 8px rgba(0, 0, 0, 0.4), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+  -moz-box-shadow: 0 1px 8px rgba(0, 0, 0, 0.4), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.4), 0 0 40px rgba(0, 0, 0, 0.1) inset; }
+
+.shadow-effect:before, .shadow-effect:after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
+  top: 50%;
+  bottom: 0;
+  left: 10px;
+  right: 10px;
+  -moz-border-radius: 100px / 10px;
+  border-radius: 100px / 10px; }
+
+.shadow-effect:after {
+  right: 10px;
+  left: auto;
+  -webkit-transform: skew(8deg) rotate(3deg);
+  -moz-transform: skew(8deg) rotate(3deg);
+  -ms-transform: skew(8deg) rotate(3deg);
+  -o-transform: skew(8deg) rotate(3deg);
+  transform: skew(8deg) rotate(3deg); }
 
 #login-page section {
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 25px auto 3%;
-  max-width: 1024px; }
+  max-width: 1024px;
+  width: 90%; }
 
 .login-shape, .login-input {
   min-height: 650px;
@@ -151,21 +243,24 @@ nav ul li {
   display: flex;
   justify-content: top;
   max-width: 1024px;
+  width: 90%;
   margin: 25px auto; }
 
 .faq {
-  width: 60%;
-  border: 3px solid #ececec; }
+  width: 53%;
+  margin-right: 3%;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
   .faq .faq-header {
     background: #faf0a1;
-    height: 65px;
     padding: 10px;
     display: flex;
     justify-content: center;
     align-items: flex-end; }
     .faq .faq-header img {
       margin-right: 15px;
-      max-height: 100%; }
+      width: 50px; }
     .faq .faq-header .tagline h3 {
       font-size: .8rem; }
 
@@ -176,16 +271,21 @@ nav ul li {
     margin: 15px 0 5px; }
 
 .signup {
-  width: 40%;
-  border: 3px solid #ececec; }
+  width: 45%;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
 
-.signup form {
-  text-align: center;
-  margin: 15px 0; }
-  .signup form legend {
+.signup {
+  padding: 10px;
+  box-sizing: border-box; }
+  .signup form {
     text-align: center;
-    margin: 8px auto;
-    display: block; }
+    margin: 15px 0; }
+    .signup form legend {
+      text-align: center;
+      margin: 8px auto;
+      display: block; }
 
 .input-wrapper {
   position: relative;
@@ -208,8 +308,6 @@ nav ul li {
     font-size: .8rem;
     border: 1px solid #ececec;
     padding: 10px; }
-  .input-wrapper input:invalid ~ label {
-    transform: translateY(-27px); }
 
 .border-seperation {
   margin: 15px 0;
@@ -289,6 +387,9 @@ button {
   padding: 10px 30px;
   border: none;
   outline: 0;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
   -webkit-transition: all 0.5s;
   transition: all 0.5s; }
 
@@ -321,5 +422,63 @@ legend {
   content: "";
   clear: both;
   display: block; }
+
+@media (max-width: 767px) {
+  nav {
+    display: none; }
+
+  .logo {
+    padding: 13px 7px;
+    width: 45px;
+    top: -16px; }
+
+  .mobile {
+    display: flex;
+    justify-content: space-between; }
+
+  .login-input .login-header {
+    margin: 10px; }
+    .login-input .login-header h3 {
+      width: 90%; }
+
+  #signUpPage {
+    display: block;
+    margin: 25px auto; }
+
+  .faq {
+    width: 90%;
+    margin: 25px auto; }
+
+  .faq-content {
+    padding: 5px 25px 25px; }
+
+  .signup {
+    width: 90%;
+    padding: 25px; } }
+@media (max-width: 585px) {
+  #login-page section {
+    box-shadow: none; }
+
+  .login-shape {
+    display: none; }
+
+  .login-input {
+    min-height: 650px;
+    width: 90%;
+    padding-top: 50px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
+
+  .remodal .modal-content {
+    width: 65%;
+    top: 20%; }
+
+  #modal h3 {
+    margin-bottom: 15px; }
+
+  #modal button {
+    margin: 5px auto; }
+
+  .header-tagline p {
+    display: none; } }
 
 /*# sourceMappingURL=style.css.map */
