--- a/src/main/resources/static/css/style.scss
+++ b/src/main/resources/static/css/style.scss
@@ -75,6 +75,9 @@ button {
   padding: 10px 30px;
   border: none;
   outline: 0;
+  -webkit-box-shadow:0 1px 3px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow:0 1px 3px rgba(0, 0, 0, 0.3);
+  box-shadow:0 1px 3px rgba(0, 0, 0, 0.3);
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
@@ -118,3 +121,5 @@ legend {
   clear: both;
   display: block;
 }
+
+@import "partials/media";
