added more forgotpassword contents

--- a/src/main/resources/templates/changePasswordForm.html
+++ b/src/main/resources/templates/changePasswordForm.html
@@ -7,12 +7,12 @@
 <body>
 
 
-<form action="#" th:action="@{/resetPasswordSubmit}">
+<form method="post" action="#" th:action="@{/passwordResetSubmit}">
     <label>
         <span>Enter Your Password: </span>
         <input type="text" name="password"/>
     </label>
-    <input type="hidden" name ="userId" th:value="${userId}">
+    <input type="hidden" name ="userId" th:value="${userId}"/>
 
     <button>Submit</button>
 
