--- a/src/main/resources/templates/forgotPasswordForm.html
+++ b/src/main/resources/templates/forgotPasswordForm.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form action="forgotPassword.html" th:action="@{/passwordResetEmail}">
+<form action="forgotPasswordForm.html" th:action="@{/passwordResetEmail}">
     <fieldset>
         <legend>Find Your Account</legend>
         <label for="searchEmail">
