--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -43,7 +43,7 @@
 
 
         <!--Changed <p> to <a> so might need renaming in CSS-->
-      <a class="forgot-password" href="forgotPassword.html" th:href="@{/forgotPassword}">Forgot Password</a>
+      <a class="forgot-password" href="forgotPasswordForm.html" th:href="@{/forgotPassword}">Forgot Password?</a>
       <button type="submit" class="send">Login</button>
       <!-- <button type="submit"><a href="teacherSignUp.html" th:href="@{/teacherSignUp}">Sign-Up</a></button> -->
     </form>
