back button added to message log

--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -79,7 +79,9 @@
         </select>
 
         <label>
-            <textarea id="messageTextArea">Message Goes Here</textarea>
+            <textarea name="messageText" id="messageTextArea">Message Goes Here</textarea>
+
+
         </label>
         <button class="send">Send Message</button>
     </form>
